--- a/lina_dicto/index.html
+++ b/lina_dicto/index.html
@@ -4,11 +4,13 @@
 		<meta charset="UTF-8">
 		<title>lina_dicto - Esperanto to Japanese -</title>
 
+		<script type="text/javascript" src="./js/dictionary_loader.js"></script>
 		<script type="text/javascript" src="./js/dictionary.js"></script>
 		<script type="text/javascript" src="./js/esperanto.js"></script>
 		<script type="text/javascript" src="./js/menu.js"></script>
 		<script type="text/javascript" src="./js/extension.js"></script>
 		<script type="text/javascript" src="./js/index.js"></script>
+
 		<LINK href="css/style.css" rel="stylesheet" type="text/css">
 
 	</head>
