add platform.js extension for not electron versions

--- a/lina_dicto/index.html
+++ b/lina_dicto/index.html
@@ -9,6 +9,7 @@
 		<script type="text/javascript" src="./js/esperanto.js"></script>
 		<script type="text/javascript" src="./js/menu.js"></script>
 		<script type="text/javascript" src="./js/extension.js"></script>
+		<script type="text/javascript" src="./js/platform.js"></script>
 		<script type="text/javascript" src="./js/index.js"></script>
 
 		<LINK href="css/style.css" rel="stylesheet" type="text/css">
