--- a/lina_dicto/index.html
+++ b/lina_dicto/index.html
@@ -19,8 +19,9 @@
 
 		<div id="timeline"></div>
 		<div id="query-area">
-			<div id="query-area__query-input">
+			<div id="query-area__query-input" style="display:inline">
 				<input id="query-area__query-input__input" type="text" onkeypress="on_keypress_by_query_input_element(event);" onkeyup="on_keyup_by_query_input_element(event);" />
+				<input id="query-area__query-input__button" type="image" src="image/search_icon.svg" />
 			</div>
 			<div id="query-area__query-incrementals"></div>
 		</div>
