--- a/lina_dicto/index.html
+++ b/lina_dicto/index.html
@@ -7,6 +7,7 @@
 		<script type="text/javascript" src="./js/dictionary_loader.js"></script>
 		<script type="text/javascript" src="./js/dictionary.js"></script>
 		<script type="text/javascript" src="./js/esperanto.js"></script>
+		<script type="text/javascript" src="./js/linad.js"></script>
 		<script type="text/javascript" src="./js/menu.js"></script>
 		<script type="text/javascript" src="./js/extension.js"></script>
 		<script type="text/javascript" src="./js/platform.js"></script>
