history to file of user input keyword

--- a/lina_dicto/index.html
+++ b/lina_dicto/index.html
@@ -8,6 +8,7 @@
 		<script type="text/javascript" src="./js/dictionary.js"></script>
 		<script type="text/javascript" src="./js/esperanto.js"></script>
 		<script type="text/javascript" src="./js/linad.js"></script>
+		<script type="text/javascript" src="./js/history.js"></script>
 		<script type="text/javascript" src="./js/menu.js"></script>
 		<script type="text/javascript" src="./js/extension.js"></script>
 		<script type="text/javascript" src="./js/platform.js"></script>
