--- a/lina_dicto/index.html
+++ b/lina_dicto/index.html
@@ -12,6 +12,7 @@
 		<script type="text/javascript" src="./js/menu.js"></script>
 		<script type="text/javascript" src="./js/extension.js"></script>
 		<script type="text/javascript" src="./js/platform.js"></script>
+		<script type="text/javascript" src="./js/external_browser.js"></script>
 		<script type="text/javascript" src="./js/index.js"></script>
 
 		<LINK href="css/style.css" rel="stylesheet" type="text/css">
