css/platform.css

--- a/lina_dicto/index.html
+++ b/lina_dicto/index.html
@@ -16,6 +16,7 @@
 		<script type="text/javascript" src="./js/index.js"></script>
 
 		<LINK href="css/style.css" rel="stylesheet" type="text/css">
+		<LINK href="css/platform.css" rel="stylesheet" type="text/css">
 
 	</head>
 	<body>
