--- a/lina_dicto/index.html
+++ b/lina_dicto/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<title>lina_dicto - Esperanto to Japanese -</title>
 
+		<script type="text/javascript" src="./js/esperanto_language.js"></script>
 		<script type="text/javascript" src="./js/dictionary_loader.js"></script>
 		<script type="text/javascript" src="./js/dictionary.js"></script>
 		<script type="text/javascript" src="./js/esperanto.js"></script>
