--- a/lina_dicto/index.html
+++ b/lina_dicto/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>lina_dicto - Esperanto to Japanese -</title>
+		<title>lina_dicto - Esperanto / Japanese -</title>
 
 		<script type="text/javascript" src="./js/file_loader.js"></script>
 		<script type="text/javascript" src="./js/language.js"></script>
