language.css style

--- a/lina_dicto/index.html
+++ b/lina_dicto/index.html
@@ -19,6 +19,7 @@
 
 		<LINK href="css/style.css" rel="stylesheet" type="text/css">
 		<LINK href="css/platform.css" rel="stylesheet" type="text/css">
+		<LINK href="css/language.css" rel="stylesheet" type="text/css">
 
 	</head>
 	<body>
