update npm package

--- a/lina_dicto/index.html
+++ b/lina_dicto/index.html
@@ -4,12 +4,7 @@
 		<meta charset="UTF-8">
 		<title>lina_dicto - Esperanto / Japanese -</title>
 
-		<script type="text/javascript" src="./js/file_loader.js"></script>
-		<script type="text/javascript" src="./js/dictionary_loader.js"></script>
-		<script type="text/javascript" src="./js/history.js"></script>
-		<script type="text/javascript" src="./js/extension.js"></script>
-		<script type="text/javascript" src="./js/external_browser.js"></script>
-		<script type="text/javascript" src="./js/index.js"></script>
+		<script type="text/javascript" src="./js/bundle.js"></script>
 
 		<LINK href="css/style.css" rel="stylesheet" type="text/css">
 		<LINK href="css/platform.css" rel="stylesheet" type="text/css">
